--- a/.github/workflows/ci-aks.yml
+++ b/.github/workflows/ci-aks.yml
@@ -24,7 +24,7 @@ jobs:
   # ============================================
   validate-bicep:
     name: Validate Bicep
-    runs-on: arc-runner-set
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout code
@@ -55,7 +55,7 @@ jobs:
   # ============================================
   validate-scripts:
     name: Validate Shell Scripts
-    runs-on: arc-runner-set
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout code
@@ -77,7 +77,7 @@ jobs:
   # ============================================
   validate-yaml:
     name: Validate YAML
-    runs-on: arc-runner-set
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout code
@@ -98,7 +98,7 @@ jobs:
   # ============================================
   summary:
     name: Validation Summary
-    runs-on: arc-runner-set
+    runs-on: ubuntu-latest
     needs: [validate-bicep, validate-scripts, validate-yaml]
     if: always()
     
