--- a/.github/workflows/ci-vm.yml
+++ b/.github/workflows/ci-vm.yml
@@ -1,8 +1,8 @@
 name: CI - Terraform VM Runner Infrastructure
 
 # =============================================================================
-# 此 workflow 用於驗證 TERRAFORM 資料夾中的 VM Self-Hosted Runner 基礎設施
-# 使用 VM 上的 Self-Hosted Runner 執行
+# 此 workflow 用於驗證 TERRAFORM 資料夾中的 VM ubuntu-latest Runner 基礎設施
+# 使用 VM 上的 ubuntu-latest Runner 執行
 # =============================================================================
 
 on:
@@ -25,7 +25,7 @@ jobs:
   # ============================================
   validate-terraform:
     name: Validate Terraform
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout code
@@ -60,7 +60,7 @@ jobs:
   # ============================================
   validate-scripts:
     name: Validate Shell Scripts
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout code
@@ -89,7 +89,7 @@ jobs:
   # ============================================
   validate-yaml:
     name: Validate Cloud-Init YAML
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     
     steps:
       - name: Checkout code
@@ -110,7 +110,7 @@ jobs:
   # ============================================
   summary:
     name: Validation Summary
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     needs: [validate-terraform, validate-scripts, validate-yaml]
     if: always()
     
