feat(aks-runner): increase maxRunners to 15 for better multi-runner support
- Update MAX_RUNNERS default from 3 to 15 in install-arc.sh
- Update maxRunners from 3 to 15 in arc-runner-values.yaml.example
- Update runnerNodeMaxCount default to 5 in aks.bicep module
- Add clarifying comments that one node can run multiple Runner Pods

This allows running more concurrent GitHub Actions runners on fewer
nodes, as each D4s_v3 VM has enough resources to host multiple runner pods.

--- a/src/aks-runner/kubernetes/arc-runner-values.yaml.example
+++ b/src/aks-runner/kubernetes/arc-runner-values.yaml.example
@@ -17,7 +17,7 @@ githubConfigSecret: "github-pat-secret"
 
 # Runner 數量設定
 minRunners: 0      # 閒置時縮減到 0 節省成本
-maxRunners: 3      # 最大同時運行數量
+maxRunners: 15     # 最大同時運行數量 (一個節點可跑多個 runner)
 
 # Runner Scale Set 名稱 (GitHub workflow 中的 runs-on 值)
 runnerScaleSetName: "arc-runner-set"
