feat(aks-runner): 設定 minRunners=5 實現零等待部署
將 minRunners 從 0 改為 5，確保至少 5 個 Runner 始終在線，
消除每次作業 3-5 分鐘的啟動延遲，提升 CI/CD 流程效率。

- 更新配置範例和文檔
- 新增故障排除指南
- 添加成本考量說明

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,20 @@
-# Terraform files
+# =============================================================================
+# Azure Infrastructure Files
+# =============================================================================
+
+# Bicep 參數檔案 (包含敏感資料)
+src/aks-runner/main.bicepparam
+*.parameters.json
+
+# ARC Runner 配置檔案 (包含個人設定)
+src/aks-runner/kubernetes/arc-runner-values.yaml
+
+# Azure CLI 快取
+.azure/
+
+# =============================================================================
+# Terraform Files
+# =============================================================================
 *.tfstate
 *.tfstate.*
 *.tfvars
@@ -11,21 +27,41 @@ override.tf.json
 *_override.tf
 *_override.tf.json
 
-# SSH keys
+# =============================================================================
+# Kubernetes
+# =============================================================================
+*.kubeconfig
+kubeconfig
+
+# =============================================================================
+# Secrets & Keys
+# =============================================================================
+*secret*
 *.pem
 *.ppk
+*.key
 id_rsa*
 
-# OS files
+# =============================================================================
+# OS Files
+# =============================================================================
+
+# macOS
 .DS_Store
+
+# Windows
 Thumbs.db
 
+# =============================================================================
 # IDE
+# =============================================================================
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
+# =============================================================================
 # Logs
+# =============================================================================
 *.log
