fix(ci): add Bicep installation step in CI workflow
- Added `az bicep install` command to ensure Bicep CLI is available
- Updated `.github/workflows/ci-aks.yml` to include installation step
- Improves infrastructure validation by ensuring Bicep is installed

Benefits:
- Ensures Bicep CLI is available for syntax checks
- Reduces potential errors during CI validation

--- a/.github/workflows/ci-aks.yml
+++ b/.github/workflows/ci-aks.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
+            az bicep install
             az --version
             az bicep version
       
