fix: 修正 CI workflows 執行失敗問題
- 修正 ci-aks.yml: 移除 azure/cli@v2 action，改用 runner 預裝的 Azure CLI
  - 解決 Docker 容器權限問題 (Permission denied: /home/runner/.azure/config)
  - 直接在 runner 上執行 az bicep install

- 修正 ci-vm.yml: 添加 Terraform 安裝步驟
  - 使用 hashicorp/setup-terraform@v3 action
  - 解決 terraform: command not found 錯誤

相關 Issues:
- https://github.com/lettucebo/AzureGitHubRunner/actions/runs/21329553504
- https://github.com/lettucebo/AzureGitHubRunner/actions/runs/21328509443

--- a/.github/workflows/ci-aks.yml
+++ b/.github/workflows/ci-aks.yml
@@ -30,14 +30,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Setup Azure CLI
-        uses: azure/cli@v2
-        with:
-          azcliversion: latest
-          inlineScript: |
-            az bicep install
-            az --version
-            az bicep version
+      - name: Setup Azure CLI and Bicep
+        run: |
+          # Azure CLI is pre-installed on ubuntu-latest
+          az version
+          az bicep install
+          az bicep version
       
       - name: Bicep Build (Syntax Check)
         run: |
