--- a/.github/workflows/ci-vm.yml
+++ b/.github/workflows/ci-vm.yml
@@ -31,6 +31,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: latest
+      
       - name: Show Terraform Version
         run: terraform version
       
