--- a/src/azure-devops/vm-runner/scripts/cloud-init.yml
+++ b/src/azure-devops/vm-runner/scripts/cloud-init.yml
@@ -14,19 +14,19 @@ packages:
   - jq
   - unzip
   - tar
-  
+
   # Build tools
   - build-essential
   - libssl-dev
   - libffi-dev
-  
+
   # Docker
   - docker.io
   - docker-compose
-  
+
   # .NET SDK (for Azure DevOps agent)
   - dotnet-sdk-8.0
-  
+
   # Node.js and npm (will be installed via separate script)
   - ca-certificates
   - gnupg
@@ -36,27 +36,27 @@ users:
   - name: azdevops
     groups: docker
     shell: /bin/bash
-    sudo: ['ALL=(ALL) NOPASSWD:ALL']
+    sudo: ["ALL=(ALL) NOPASSWD:ALL"]
 
 write_files:
   # Agent setup script
   - path: /tmp/setup-azdevops-agents.sh
-    permissions: '0755'
+    permissions: "0755"
     content: |
       #!/bin/bash
       export AZURE_DEVOPS_URL="${azure_devops_url}"
       export AZURE_DEVOPS_TOKEN="${azure_devops_token}"
       export AZURE_DEVOPS_POOL_NAME="${azure_devops_pool_name}"
       export AGENT_COUNT=${runner_count}
-      
+
       # Download and run the agent setup script
       curl -fsSL https://raw.githubusercontent.com/lettucebo/AzureGitHubRunner/main/src/azure-devops/vm-runner/scripts/setup-agents.sh -o /tmp/setup-agents.sh
       chmod +x /tmp/setup-agents.sh
       /tmp/setup-agents.sh
-  
+
   # Docker daemon configuration
   - path: /etc/docker/daemon.json
-    permissions: '0644'
+    permissions: "0644"
     content: |
       {
         "log-driver": "json-file",
@@ -70,17 +70,17 @@ runcmd:
   # Install Node.js LTS (via NodeSource)
   - curl -fsSL https://deb.nodesource.com/setup_lts.x | bash -
   - apt-get install -y nodejs
-  
+
   # Start Docker service
   - systemctl enable docker
   - systemctl start docker
-  
+
   # Add azdevops user to docker group
   - usermod -aG docker azdevops
-  
+
   # Install Azure CLI
   - curl -sL https://aka.ms/InstallAzureCLIDeb | bash
-  
+
   # Install PowerShell
   - |
     wget -q https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb
@@ -88,10 +88,10 @@ runcmd:
     apt-get update
     apt-get install -y powershell
     rm packages-microsoft-prod.deb
-  
+
   # Setup Azure DevOps agents
   - /tmp/setup-azdevops-agents.sh
-  
+
   # Cleanup
   - rm -f /tmp/setup-azdevops-agents.sh
 
